--- a/pom.xml
+++ b/pom.xml
@@ -5,108 +5,108 @@
 	* You may use the software source code solely under the terms and limitations 
 	of * The license agreement granted to you by GigaSpaces. *******************************************************************************/ -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>xap-session-sharing-manager-itests</artifactId>
-	<groupId>com.gigaspaces.http-session.qa</groupId>
-	<name>xap-session-sharing-manager-itests</name>
-	<version>11.0.0-SNAPSHOT</version>
-	<packaging>pom</packaging>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>xap-session-sharing-manager-itests</artifactId>
+    <groupId>com.gigaspaces.http-session.qa</groupId>
+    <name>xap-session-sharing-manager-itests</name>
+    <version>11.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-	<modules>
-		<module>data-model</module>
-		<module>web</module>
-		<module>sys-tests</module>
-	</modules>
+    <modules>
+        <module>data-model</module>
+        <module>web</module>
+        <module>sys-tests</module>
+    </modules>
 
-	<properties>
-		<slf4j.version>1.6.4</slf4j.version>
-		<kryo.version>2.22</kryo.version>
-		<commons.codec.version>1.9</commons.codec.version>
-		<slf4j.version>1.6.4</slf4j.version>
-		<gsVersion>${project.version}</gsVersion>
+    <properties>
+        <slf4j.version>1.6.4</slf4j.version>
+        <kryo.version>2.22</kryo.version>
+        <commons.codec.version>1.9</commons.codec.version>
+        <slf4j.version>1.6.4</slf4j.version>
+        <gsVersion>${project.version}</gsVersion>
         <compileSource>1.6</compileSource>
         <testCompileSource>1.6</testCompileSource>
         <compileJdkPath>/usr/lib/jvm/java-7-oracle</compileJdkPath>
         <testCompileJdkPath>/usr/lib/jvm/java-7-oracle</testCompileJdkPath>
         <xap.home>${env.XAP_HOME}</xap.home>
     </properties>
-	<repositories>
-		<repository>
-			<id>org.openspaces</id>
-			<name>OpenSpaces</name>
-			<url>http://maven-repository.openspaces.org</url>
-			<releases>
-				<enabled>true</enabled>
-				<updatePolicy>daily</updatePolicy>
-				<checksumPolicy>warn</checksumPolicy>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-				<updatePolicy>always</updatePolicy>
-				<checksumPolicy>warn</checksumPolicy>
-			</snapshots>
-		</repository>
-	</repositories>
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>com.gigaspaces.http-session</groupId>
-				<artifactId>gs-session-manager</artifactId>
-				<version>${gsVersion}</version>
-				<!--<scope>import</scope>-->
-				<exclusions>
-					<exclusion>
-						<artifactId>shiro-all</artifactId>
-						<groupId>org.apache.shiro</groupId>
-					</exclusion>
-					<exclusion>
-						<artifactId>kryo</artifactId>
-						<groupId>com.esotericsoftware.kryo</groupId>
-					</exclusion>
-					<exclusion>
-						<artifactId>xstream</artifactId>
-						<groupId>com.thoughtworks.xstream</groupId>
-					</exclusion>
-					<exclusion>
-						<artifactId>xmlbeans</artifactId>
-						<groupId>org.apache.xmlbeans</groupId>
-					</exclusion>
-					<exclusion>
-						<artifactId>slf4j-api</artifactId>
-						<groupId>org.slf4j</groupId>
-					</exclusion>
-				</exclusions>
-			</dependency>
+    <repositories>
+        <repository>
+            <id>org.openspaces</id>
+            <name>OpenSpaces</name>
+            <url>http://maven-repository.openspaces.org</url>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+                <checksumPolicy>warn</checksumPolicy>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+                <checksumPolicy>warn</checksumPolicy>
+            </snapshots>
+        </repository>
+    </repositories>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.gigaspaces.http-session</groupId>
+                <artifactId>gs-session-manager</artifactId>
+                <version>${gsVersion}</version>
+                <!--<scope>import</scope>-->
+                <exclusions>
+                    <exclusion>
+                        <artifactId>shiro-all</artifactId>
+                        <groupId>org.apache.shiro</groupId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>kryo</artifactId>
+                        <groupId>com.esotericsoftware.kryo</groupId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>xstream</artifactId>
+                        <groupId>com.thoughtworks.xstream</groupId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>xmlbeans</artifactId>
+                        <groupId>org.apache.xmlbeans</groupId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>slf4j-api</artifactId>
+                        <groupId>org.slf4j</groupId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
 
-			<dependency>
-				<groupId>com.gigaspaces</groupId>
-				<artifactId>gs-openspaces</artifactId>
-				<version>${gsVersion}</version>
-			</dependency>
+            <dependency>
+                <groupId>com.gigaspaces</groupId>
+                <artifactId>gs-openspaces</artifactId>
+                <version>${gsVersion}</version>
+            </dependency>
 
-			<dependency>
-				<groupId>org.apache.commons</groupId>
-				<artifactId>commons-io</artifactId>
-				<version>1.3.2</version>
-			</dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>1.3.2</version>
+            </dependency>
 
-			<dependency>
-				<groupId>commons-codec</groupId>
-				<artifactId>commons-codec</artifactId>
-				<version>${commons.codec.version}</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
-	<reporting>
-		<plugins>
-			<plugin>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<configuration>
-					<skip>true</skip>
-				</configuration>
-			</plugin>
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commons.codec.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+    <reporting>
+        <plugins>
+            <plugin>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -125,8 +125,8 @@
                     <showSuccess>true</showSuccess>
                 </configuration>
             </plugin>
-		</plugins>
-	</reporting>
+        </plugins>
+    </reporting>
     <build>
         <plugins>
             <plugin>
@@ -143,7 +143,9 @@
     <profiles>
         <profile>
             <id>use-xap-jars</id>
-            <activation><activeByDefault>false</activeByDefault></activation>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
             <dependencyManagement>
                 <dependencies>
                     <dependency>
