--- a/sys-tests/pom.xml
+++ b/sys-tests/pom.xml
@@ -173,14 +173,14 @@
                 <groupId>com.gigaspaces</groupId>
                 <artifactId>newman-test-generator</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
-                <executions>
+     <!--           <executions>
                     <execution>
                         <phase>test-compile</phase>
                         <goals>
                             <goal>generate</goal>
                         </goals>
                     </execution>
-                </executions>
+                </executions>-->
                 <configuration>
                     <type>httpsession</type>
                     <outputFile>${project.build.directory}/http-session-tests.json</outputFile>
