--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>xap-session-sharing-manager-itests</artifactId>
     <groupId>com.gigaspaces.http-session.qa</groupId>
     <name>xap-session-sharing-manager-itests</name>
-    <version>11.0.0-SNAPSHOT</version>
+    <version>11.0.0-14706-M5</version>
     <packaging>pom</packaging>
 
     <modules>
