--- a/sys-tests/pom.xml
+++ b/sys-tests/pom.xml
@@ -78,8 +78,8 @@
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.6.4</version>
+			<artifactId>slf4j-jdk14</artifactId>
+			<version>1.7.13</version>
 		</dependency>
 
 		<dependency>
