--- a/web/pom.xml
+++ b/web/pom.xml
@@ -13,7 +13,7 @@
 		<groupId>com.gigaspaces.http-session.qa</groupId>
 		<artifactId>xap-session-sharing-manager-itests</artifactId>
 		<relativePath>../pom.xml</relativePath>
-		<version>11.0.0-SNAPSHOT</version>
+		<version>11.0.0-14712-M11</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
