--- a/data-model/pom.xml
+++ b/data-model/pom.xml
@@ -4,7 +4,7 @@
 		<groupId>com.gigaspaces.http-session.qa</groupId>
 		<artifactId>xap-session-sharing-manager-itests</artifactId>
 		<relativePath>../pom.xml</relativePath>
-		<version>11.0.0-14800-RELEASE</version>
+		<version>11.0.1-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
