--- a/pom.xml
+++ b/pom.xml
@@ -238,6 +238,13 @@
                     <scope>import</scope>
                 </dependency>
                 <dependency>
+                    <groupId>com.gigaspaces</groupId>
+                    <artifactId>open-core-common</artifactId>
+                    <version>${gsVersion}</version>
+                    <type>pom</type>
+                    <scope>import</scope>
+                </dependency>
+                <dependency>
                     <groupId>org.apache.maven.surefire</groupId>
                     <artifactId>surefire-junit4</artifactId>
                     <version>2.17</version>
